--- a/company.html
+++ b/company.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>企業・ビジネスサイト向け 無料ホームページテンプレート tp_biz58</title>
+<title>藤井俊輔のホームページ</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <link rel="stylesheet" href="css/style.css">
@@ -35,7 +35,7 @@
 
 <section>
 
-<h2>会社概要</h2>
+<h2>自己紹介</h2>
 
 <table class="ta1">
 <caption>大見出しが必要ならここを使います</caption>
